--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
-@import url(https://mentor404.github.io/anilist-css/files/background.css);
-@import url(https://mentor404.github.io/anilist-css/files/banner-remove.css);
-@import url(https://mentor404.github.io/anilist-css/files/navbar.css);
-@import url(https://mentor404.github.io/anilist-css/files/color-theme.css);
-@import url(https://mentor404.github.io/anilist-css/files/font.css);
-@import url(https://mentor404.github.io/anilist-css/files/stats2.css);
-@import url(https://mentor404.github.io/anilist-css/files/favourites.css);
-@import url(https://mentor404.github.io/anilist-css/files/feed.css);
-@import url(https://mentor404.github.io/anilist-css/files/footer.css);
-@import url(https://mentor404.github.io/anilist-css/files/top-nav.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/background.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/banner-remove.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/navbar.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/color-theme.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/font.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/stats2.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/favourites.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/feed.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/footer.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/top-nav.css);
