--- a/files/background.css
+++ b/files/background.css
@@ -1,6 +1,6 @@
 /* background */
 :root{
-    --background: url("https://imgur.com/zHPwFOM.png");
+    --background: url("https://imgur.com/ydU0R1T.png");
                         /* Put your background here ^^ */
 }
 
