--- a/files/background.css
+++ b/files/background.css
@@ -1,6 +1,6 @@
 /* background */
 :root{
-    --background: url("https://images5.alphacoders.com/114/1141137.jpg");
+    --background: url("https://i.imgur.com/ShGtYpP.png");
                         /* Put your background here ^^ */
 }
 
