--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url(https://wiik018.github.io/anilist-css-1/files/background.css);
+@import url(https://wiik018.github.io/anilist-css-1/files/banner-remove.css);
 @import url(https://wiik018.github.io/anilist-css-1/files/navbar.css);
 @import url(https://wiik018.github.io/anilist-css-1/files/color-theme.css);
 @import url(https://wiik018.github.io/anilist-css-1/files/font.css);
