--- a/files/top-nav.css
+++ b/files/top-nav.css
@@ -1,5 +1,5 @@
 .nav.nav-unscoped{
-  background: rgb(38, 1, 11, 0.5) !important;
+  background: rgb(252, 173, 135, 0.5) !important;
   max-width: 1320px !important;
   padding-left: 100px !important;
   padding-right: 100px !important;
@@ -9,7 +9,7 @@
 }
 
 .logo{
-content: url("https://files.catbox.moe/ejfi9v.png");
+content: url("https://i.imgur.com/b9O7bzy.png");
 opacity: 0.5;
 transition: scale 1s, opacity .5s;
 }
@@ -22,7 +22,7 @@ scale: 1.3;
 }
 
 .nav.nav-unscoped:hover{
-  background: rgb(38, 1, 11,.9) !important;
+  background: rgb(252, 173, 135,.9) !important;
 } 
 
 @media (min-width: 1040px) and (max-width: 1540px){
